Update layout bugs

--- a/app/js/components/map/_map.scss
+++ b/app/js/components/map/_map.scss
@@ -8,7 +8,8 @@
 .insights-app-dashboard-map .platform-grid main {
   display: flex;
   flex-flow: column nowrap;
-  height: 100%
+  height: 100%;
+  // min-height: 0;
 }
 
 .insights-app-dashboard-map .ins-p-page-header {
